[gd_scene load_steps=22 format=3 uid="uid://ba7413b0niv7p"]

[ext_resource type="Script" uid="uid://bantfaxh1o1hc" path="res://world.gd" id="1_f3sb7"]
[ext_resource type="Theme" uid="uid://bx3jvtk8472ag" path="res://theme.tres" id="2_fj7yv"]
[ext_resource type="Script" uid="uid://moiaaowbxk07" path="res://fps.gd" id="3_036b0"]
[ext_resource type="Script" uid="uid://btn2vdum3tw65" path="res://camera.gd" id="3_aqk2v"]
[ext_resource type="PackedScene" uid="uid://bsqnwlgseytya" path="res://rule_edit.tscn" id="3_dwbse"]
[ext_resource type="Texture2D" uid="uid://c35s8ly6267ga" path="res://sq/square.png" id="4_aqk2v"]
[ext_resource type="Texture2D" uid="uid://cyl0cn4i4dfrr" path="res://ui/reverse.png" id="5_ioo17"]
[ext_resource type="Texture2D" uid="uid://drpnqfhdv5qfl" path="res://ui/stop.png" id="6_wse8f"]
[ext_resource type="Texture2D" uid="uid://hmx0wn5wnt1e" path="res://ui/forward.png" id="7_ic0uy"]
[ext_resource type="Texture2D" uid="uid://dmtolp5cql5xi" path="res://ui/ant.png" id="8_ic0uy"]
[ext_resource type="Texture2D" uid="uid://dujfgqv2ija7y" path="res://ui/pencil_pixel.png" id="9_k3n1d"]
[ext_resource type="Texture2D" uid="uid://cbp4pbrwwmctg" path="res://ui/grabber.png" id="10_k3n1d"]
[ext_resource type="Texture2D" uid="uid://bs8erks0flsvk" path="res://ui/clear.png" id="11_2o6r5"]
[ext_resource type="Texture2D" uid="uid://cg36jnkom5ccw" path="res://ui/camera.png" id="12_hiqwa"]
[ext_resource type="Script" uid="uid://e4g3ecm5xd1w" path="res://CSharpField.cs" id="14_70uel"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hiqwa"]
width = 2
height = 64

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ioo17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wse8f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ic0uy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o6r5"]
content_margin_left = 79.0
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.466667, 0.466667, 0.466667, 1)
expand_margin_top = 3.0
expand_margin_bottom = 3.0
anti_aliasing = false

[sub_resource type="ArrayMesh" id="ArrayMesh_036b0"]
_surfaces = [{
"2d": true,
"aabb": AABB(-8, -8, 0, 16, 16, 0),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0),
"format": 34393296913,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 2, 0, 2, 0, 1, 0, 0, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 193, 0, 0, 0, 193, 0, 0, 0, 193, 0, 0, 0, 65, 0, 0, 0, 65, 0, 0, 0, 65, 0, 0, 0, 65, 0, 0, 0, 193)
}]

[node name="World" type="Node2D"]
script = ExtResource("1_f3sb7")

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="Canvas"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="state_control" type="Control" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 256.0
grow_vertical = 2

[node name="bg" type="ColorRect" parent="Canvas/UI/state_control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="tab" type="TabContainer" parent="Canvas/UI/state_control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.0148148
anchor_right = 0.9375
anchor_bottom = 0.933333
current_tab = 0
metadata/_edit_use_anchors_ = true

[node name="states" type="Control" parent="Canvas/UI/state_control/tab"]
layout_mode = 2
metadata/_tab_index = 0

[node name="state_box" type="VBoxContainer" parent="Canvas/UI/state_control/tab/states"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0357143
anchor_top = 0.0153846
anchor_right = 0.964286
anchor_bottom = 0.986325
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Canvas/UI/state_control/tab/states/state_box"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("2_fj7yv")
text = "test"

[node name="extra" type="Control" parent="Canvas/UI/state_control/tab"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="LineEdit" type="LineEdit" parent="Canvas/UI/state_control/tab/extra"]
layout_mode = 0
anchor_left = 0.0357143
anchor_top = 0.0153846
anchor_right = 0.964286
anchor_bottom = 0.0683761
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Canvas/UI/state_control"]
layout_mode = 0
anchor_left = 0.0625
anchor_top = 0.940741
anchor_right = 0.46875
anchor_bottom = 0.985185
text = "STOP"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Canvas/UI/state_control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.53125
anchor_top = 0.940741
anchor_right = 0.9375
anchor_bottom = 0.985185
text = "RUN"
metadata/_edit_use_anchors_ = true

[node name="HSplit" type="HSplitContainer" parent="Canvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_fj7yv")
theme_override_constants/minimum_grab_thickness = 16
theme_override_icons/grabber = SubResource("NoiseTexture2D_hiqwa")

[node name="RuleEdit" parent="Canvas/HSplit" instance=ExtResource("3_dwbse")]
layout_mode = 2
size_flags_horizontal = 3

[node name="OnScreen" type="Control" parent="Canvas/HSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Label" parent="Canvas/HSplit/OnScreen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
horizontal_alignment = 2
script = ExtResource("3_036b0")

[node name="Turns" type="Label" parent="Canvas/HSplit/OnScreen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 24.0
offset_bottom = 47.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="BG" type="Panel" parent="Canvas/HSplit/OnScreen"]
modulate = Color(1, 1, 1, 0.160784)
layout_mode = 0
offset_right = 304.0
offset_bottom = 24.0

[node name="HBox" type="HBoxContainer" parent="Canvas/HSplit/OnScreen"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 24.0
theme_override_constants/separation = 0

[node name="Clear" type="Button" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("11_2o6r5")
flat = true
expand_icon = true

[node name="Reverse" type="Button" parent="Canvas/HSplit/OnScreen/HBox"]
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ioo17")
icon = ExtResource("5_ioo17")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Stop" type="Button" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_wse8f")
icon = ExtResource("6_wse8f")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Forward" type="Button" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ic0uy")
icon = ExtResource("7_ic0uy")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Speed" type="Control" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="SpeedSlider" type="HSlider" parent="Canvas/HSplit/OnScreen/HBox/Speed"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/center_grabber = -1
theme_override_icons/grabber = ExtResource("10_k3n1d")
theme_override_icons/grabber_highlight = ExtResource("10_k3n1d")
theme_override_styles/slider = SubResource("StyleBoxFlat_2o6r5")
min_value = 1.0
max_value = 1e+07
value = 1.0
exp_edit = true
rounded = true
scrollable = false
metadata/_edit_use_anchors_ = true

[node name="TPS" type="Label" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
text = "1"

[node name="Seperator" type="VSeparator" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Ant" type="Button" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("8_ic0uy")
flat = true
expand_icon = true

[node name="Pencil" type="Button" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("9_k3n1d")
flat = true
expand_icon = true

[node name="Screenshot" type="Button" parent="Canvas/HSplit/OnScreen/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("12_hiqwa")
flat = true
expand_icon = true

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("3_aqk2v")

[node name="Square" type="MeshInstance2D" parent="."]
visible = false
position = Vector2(104, 224)
mesh = SubResource("ArrayMesh_036b0")
texture = ExtResource("4_aqk2v")

[node name="Field" type="Node2D" parent="."]

[node name="Ants" type="Node2D" parent="Field"]
z_index = 1

[node name="Chunks" type="Node2D" parent="Field"]

[node name="CsNode" type="Node" parent="."]
script = ExtResource("14_70uel")

[connection signal="dragged" from="Canvas/HSplit" to="." method="_on_h_split_dragged"]
[connection signal="pressed" from="Canvas/HSplit/OnScreen/HBox/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Canvas/HSplit/OnScreen/HBox/Reverse" to="." method="_on_reverse_pressed"]
[connection signal="pressed" from="Canvas/HSplit/OnScreen/HBox/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Canvas/HSplit/OnScreen/HBox/Forward" to="." method="_on_forward_pressed"]
[connection signal="value_changed" from="Canvas/HSplit/OnScreen/HBox/Speed/SpeedSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Canvas/HSplit/OnScreen/HBox/Screenshot" to="." method="_on_screenshot_pressed"]
